@@ -1,4 +1,8 @@
 2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* restore-src/restore.c: Improve debugging.
+	* server-src/changer.c: Make sure to dup the fd out of the 0..2 range.
+
+2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* restore-src/amfetchdump.c: Pass new prompt_in parameter to
 				     search_tapes.
 	* restore-src/restore.c (search_tapes, load_manual_tape): New prompt_in
